[package]
name = "serialize"
version = "0.1.0"
edition = "2021"

[dependencies]
dao-voting-cw20-staked = { git = "https://github.com/DA0-DA0/dao-contracts.git" }
dao-proposal-single = { git = "https://github.com/DA0-DA0/dao-contracts.git" }
dao-pre-propose-single = { git = "https://github.com/DA0-DA0/dao-contracts.git" }
dao-voting = { git = "https://github.com/DA0-DA0/dao-contracts.git" }
dao-interface = { git = "https://github.com/DA0-DA0/dao-contracts.git" }
cosmwasm-std = { version = "1.1", features = ["ibc3"] }
cw-utils = "0.16"
